Supports LaTex String representation for Expression